Converted shtml format to new markdown format
I used the following one-liner:

$ for f in *.html; do echo echo $f\;; echo 'perl -Mojo -MHTML::Entities=encode_entities -E '\''my $dom=x(b(@ARGV[0])->slurp); say qq(---\nlayout: post\ntitle: ), encode_entities($dom->find(q(h2, h3))->text), qq(\n---); my $t = $dom->at(q(h2, h3))->next_sibling; while ( $t=$t->next_sibling ) { print $t }'\''' $f \> $f.tmp \; ;  echo mv $f.tmp $f \; ; done

--- a/_posts/2002-11-06-perl+sdl.html
+++ b/_posts/2002-11-06-perl+sdl.html
@@ -1,12 +1,13 @@
-<!-- $Id: 2002-11-06-perl+sdl.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>Oslo.pm inviterer til medlemsmøte om Perl og SDL!</h3>
-
+---
+layout: post
+title: Oslo.pm inviterer til medlemsm&oslash;te om Perl og SDL!
+---
 <pre>
    <strong><a href="http://linpro.no/?page=kart">Linpro sine lokaler</a>, Wdm. Thranes gt 98
    Onsdag 6. november, klokken 18:00</strong>
 </pre>
 
-<p>"Alle" vet at Perl egner seg til tekstprosessering, databasetilgang, og
+<p>&quot;Alle&quot; vet at Perl egner seg til tekstprosessering, databasetilgang, og
 lignende, men et felt som de færreste forbinder med Perl er grafiske
 spill. Etter at David J. Goehrig m.fl. lagde <a href="http://sdlperl.org/">Perl-bindinger til
 SDL-biblioteket</a>, kan dette være i ferd med å endre seg noe. SDL, Simple
