--- a/_posts/2003-01-08-perl+asp.html
+++ b/_posts/2003-01-08-perl+asp.html
@@ -1,6 +1,7 @@
-<!-- $Id: 2003-01-08-perl+asp.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>Oslo.pm inviterer til medlemsmøte om Perl og ASP!</h3>
-
+---
+layout: post
+title: Oslo.pm inviterer til medlemsm&oslash;te om Perl og ASP!
+---
 <pre>
    <strong><a href="http://linpro.no/?page=kart">Linpro sine lokaler</a>, Wdm. Thranes gt. 98
    Onsdag 8. januar 2003, klokken 18:00</strong>
@@ -16,8 +17,7 @@ har opplevd at Perl+ASP er langt mer behagelig å jobbe med enn VB+ASP.</p>
 samt gi en liten innføring i ASP. Kombinasjonen er ganske gøy, og særdeles 
 nyttig hvis valg av servermiljø er begrenset!</p>
 
-<p>Bjørn Furuknap er daglig leder i <a
-href="http://www.infonett.hm.no/publ/Hovedside/index.stm">LIT AS</a> og
+<p>Bjørn Furuknap er daglig leder i <a href="http://www.infonett.hm.no/publ/Hovedside/index.stm">LIT AS</a> og
 jobber med utvikling av programvare samt teknisk drift av nettstedet og
 servere. Bjørn har 20 års programmeringserfaring, har vært Perl-utvikler
 i 6 år og jobbet med perl/ASP i 3 år. Han var med og startet Infonett A/S,
@@ -25,9 +25,9 @@ og har erfaringer med å lage alt fra nettløsninger til butikkdatasystemer
 basert på Perl.</p>
 
 <p>Foredraget vil vare i maks 1½ time inkludert en kort pause, og vil
-bevege seg inn på følgende tema:<p>
+bevege seg inn på følgende tema:</p><p>
 
-<ul>
+</p><ul>
 <li>ASP 101, en kort intro</li>
 <li>Hvorfor ASP</li>
 <li>Hvorfor Perl og ASP</li>
