--- a/_posts/2003-04-02-sosialt.html
+++ b/_posts/2003-04-02-sosialt.html
@@ -1,6 +1,7 @@
-<!-- $Id: 2003-04-02-sosialt.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>Neste medlemsmøte i Oslo.pm</h3>
-
+---
+layout: post
+title: Neste medlemsm&oslash;te i Oslo.pm
+---
 <p>Oslo.pm sitt medlemsmøte <strong>2. april 2003</strong> er blitt avlyst
 grunnet lav interesse.</p>
 
