--- a/_posts/2004-08-04-sosialt.html
+++ b/_posts/2004-08-04-sosialt.html
@@ -1,9 +1,10 @@
-<!-- $Id: 2004-08-04-sosialt.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h2>Neste sosiale sammenkomst i Oslo.pm</h2>
-
-<p>Oslo.pm har hatt pause i sommer, og satser p&aring; &aring; komme i
-gang igjen med sosialt medlemsm&oslash;te <strong>4. august 2004,
-klokken 18:00</strong> Vi satser p&aring; en hyggelig
-stund som vanlig p&aring; <strong>Pastiz, Tordenskioldsgate 10
-v/R&aring;dhuset</strong>.</p>
+---
+layout: post
+title: Neste sosiale sammenkomst i Oslo.pm
+---
+<p>Oslo.pm har hatt pause i sommer, og satser på å komme i
+gang igjen med sosialt medlemsmøte <strong>4. august 2004,
+klokken 18:00</strong> Vi satser på en hyggelig
+stund som vanlig på <strong>Pastiz, Tordenskioldsgate 10
+v/Rådhuset</strong>.</p>
 
