--- a/_posts/2005-04-06-catalyst.html
+++ b/_posts/2005-04-06-catalyst.html
@@ -1,15 +1,13 @@
-<!-- BOF $Id: 2005-04-06-catalyst.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>Faglig-sosialt medlemsm&oslash;te om Catalyst!</h3>
-
-<p>Oslo.pm arrangerer en introduksjon til <a
- href="http://search.cpan.org/dist/Catalyst/"
- title="Catalyst p&aring; CPAN">Catalyst</a>, et nytt <abbr
- title="Model-View-Controller">MVC</abbr> rammeverk som henter mye
+---
+layout: post
+title: Faglig-sosialt medlemsm&oslash;te om Catalyst!
+---
+<p>Oslo.pm arrangerer en introduksjon til <a href="http://search.cpan.org/dist/Catalyst/" title="Catalyst på CPAN">Catalyst</a>, et nytt <abbr title="Model-View-Controller">MVC</abbr> rammeverk som henter mye
  inspirasjon fra Ruby on Rails og Maypole.</p>
 
 <p>
- I l&oslash;pet av presentasjonen skal vi lage en enkel Wiki og vise
- hvordan Catalyst p&aring; en enkel m&aring;te muliggj&oslash;r bruk
+ I løpet av presentasjonen skal vi lage en enkel Wiki og vise
+ hvordan Catalyst på en enkel måte muliggjør bruk
  av <a href="http://www.adaptivepath.com/publications/essays/archives/000385.php">AJAX
  brukergrensesnitt</a> - kjent fra tjenester som gmail, google suggest
  og google maps. </p>
@@ -23,13 +21,12 @@
 
 
 <p>Foredragsholder er Marcus Ramberg, aktiv deltager i Catalyst-prosjektet.
- Marcus jobber for tiden som utviklingsleder i <a href="http://www.mediaflex.no/"
- title="Hjemmesiden til Mediaflex A/S">Mediaflex</a>, et lite selskap som
- leverer <em>Pageflex</em>-baserte Web2Print l&oslash;sninger, utviklet i
+ Marcus jobber for tiden som utviklingsleder i <a href="http://www.mediaflex.no/" title="Hjemmesiden til Mediaflex A/S">Mediaflex</a>, et lite selskap som
+ leverer <em>Pageflex</em>-baserte Web2Print løsninger, utviklet i
  Perl.</p>
 
 <p>Foredraget vil vare i 1-2 timer, og etter det faglige vil vi forflytte
- oss til et av utestedene p&aring; Gr&uuml;nerl&oslash;kka for &aring;
+ oss til et av utestedene på Grünerløkka for å
  sosialisere. </p>
 
 <!-- EOF $Source: /home/groupleaders/oslo/.cvsroot/web_docs/arrangementer/2004-12-02-maypole.html,v $ -->
