--- a/_posts/2005-09-07-sosialt.html
+++ b/_posts/2005-09-07-sosialt.html
@@ -1,21 +1,22 @@
-<!-- $Id: 2005-09-07-sosialt.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>Neste medlemsm&oslash;te i Oslo.pm</h3>
-
-<p>Oslo.pm har sosialt medlemsm&oslash;te <strong>onsdag 7. september 2005, klokken
-18:00</strong>. Vi satser p&aring; en hyggelig stund p&aring;
+---
+layout: post
+title: Neste medlemsm&oslash;te i Oslo.pm
+---
+<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 7. september 2005, klokken
+18:00</strong>. Vi satser på en hyggelig stund på
 <strong>The Dubliner, Rådhusgata 28</strong>.</p>
 
 <p>
-Vi satser p&aring; &aring; ha en hyggelig stund, med lett prat om ting som
-interesserer oss. Er du t&oslash;rst, eller har du noe p&aring; hjertet, s&aring; m&oslash;t
+Vi satser på å ha en hyggelig stund, med lett prat om ting som
+interesserer oss. Er du tørst, eller har du noe på hjertet, så møt
 opp! Potensielle tema for kvelden er Lars sitt Log4Perl-foredrag neste
-uke, hva som skal skje p&aring; oktoberm&oslash;tet og Rune sine tanker om Perl6 i
+uke, hva som skal skje på oktobermøtet og Rune sine tanker om Perl6 i
 november.
 </p>
 
 <p>
-Dessuten tenker vi p&aring; &aring; arrangere Nordic Perl Workshop neste &aring;r, og om
-du er interessert i &aring; delta i arrangeringa (eller med sponsing) s&aring; m&oslash;t
+Dessuten tenker vi på å arrangere Nordic Perl Workshop neste år, og om
+du er interessert i å delta i arrangeringa (eller med sponsing) så møt
 gjerne opp! :)
 </p>
 
