--- a/_posts/2006-01-04-sosialt.html
+++ b/_posts/2006-01-04-sosialt.html
@@ -1,13 +1,14 @@
-<!-- $Id: 2006-01-04-sosialt.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>Neste medlemsm&oslash;te i Oslo.pm</h3>
-
-<p>Oslo.pm har sosialt medlemsm&oslash;te <strong>onsdag 4. januar 2006, klokken
-18:00</strong>. Vi satser p&aring; en hyggelig stund p&aring;
-<strong>The Dubliner, R&aring;dhusgata 28</strong>.</p>
+---
+layout: post
+title: Neste medlemsm&oslash;te i Oslo.pm
+---
+<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 4. januar 2006, klokken
+18:00</strong>. Vi satser på en hyggelig stund på
+<strong>The Dubliner, Rådhusgata 28</strong>.</p>
 
 <p>
-Vi sikter inn p&aring; en hyggelig stund med lett prat om ting som
-interesserer oss. Er du t&oslash;rst, eller har du noe p&aring; hjertet,
-s&aring; m&oslash;t opp! Potensielle tema for kvelden er v&aring;rens
+Vi sikter inn på en hyggelig stund med lett prat om ting som
+interesserer oss. Er du tørst, eller har du noe på hjertet,
+så møt opp! Potensielle tema for kvelden er vårens
 program og forberedelsene til Nordic Perl Workshop til sommeren. 
 </p>
