--- a/_posts/2006-06-07-npw-forberedelser.html
+++ b/_posts/2006-06-07-npw-forberedelser.html
@@ -1,14 +1,15 @@
-<!-- $Id: 2006-06-07-npw-forberedelser.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>Neste medlemsm&oslash;te i Oslo.pm</h3>
-
-<p>Oslo.pm forbereder <a href="http://www.perlworkshop.no/npw2006/">Nordic Perl Workshop 2006</a> p&aring;
-medlemsm&oslash;te onsdag 7. juni 2006, klokken 18:00. Oppm&oslash;te p&aring;
-<strong>Caf&eacute; Amsterdam</strong> i Kristian Augusts gate 4 ved Tullinløkka.</p>
+---
+layout: post
+title: Neste medlemsm&oslash;te i Oslo.pm
+---
+<p>Oslo.pm forbereder <a href="http://www.perlworkshop.no/npw2006/">Nordic Perl Workshop 2006</a> på
+medlemsmøte onsdag 7. juni 2006, klokken 18:00. Oppmøte på
+<strong>Café Amsterdam</strong> i Kristian Augusts gate 4 ved Tullinløkka.</p>
 
 <p>
-Siste innspurt til konferansen har startet, og alle som &oslash;nsker &aring;
-hjelpe med &aring; f&aring; konferansen til &aring; lykkes oppfordres herved
-til &aring; m&oslash;te opp! Det er mye som skal v&aelig;re klart, og vi vil
-trenge all den hjelpen vi kan f&aring;. <strong>Dette er siste medlemsm&oslash;te
-f&oslash;r konferansen!</strong>
+Siste innspurt til konferansen har startet, og alle som ønsker å
+hjelpe med å få konferansen til å lykkes oppfordres herved
+til å møte opp! Det er mye som skal være klart, og vi vil
+trenge all den hjelpen vi kan få. <strong>Dette er siste medlemsmøte
+før konferansen!</strong>
 </p>
