--- a/_posts/2006-08-02-sosialt.html
+++ b/_posts/2006-08-02-sosialt.html
@@ -1,9 +1,10 @@
-<!-- $Id: 2006-08-02-sosialt.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>Juli-medlemsm&oslash;tet i Oslo.pm</h3>
-
-<p>Oslo.pm har sosialt medlemsm&oslash;te <strong>onsdag 5. juli 2006, klokken
-18:00</strong>. Vi satser p&aring; en hyggelig stund p&aring;
-<strong><a href="http://kart.gulesider.no/?id=c_Z0HC1GWR" title="Link til karttjeneste">Solsiden</a>, S&oslash;ndre Akershus Kai 34</strong>.</p>
+---
+layout: post
+title: Juli-medlemsm&oslash;tet i Oslo.pm
+---
+<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 5. juli 2006, klokken
+18:00</strong>. Vi satser på en hyggelig stund på
+<strong><a href="http://kart.gulesider.no/?id=c_Z0HC1GWR" title="Link til karttjeneste">Solsiden</a>, Søndre Akershus Kai 34</strong>.</p>
 
 <p>
 Det blir ikke noe faglig program - i stedet sitter vi i solen og hygger oss med kald drikke og prat om
