--- a/_posts/2006-10-04-iusethis.html
+++ b/_posts/2006-10-04-iusethis.html
@@ -1,6 +1,7 @@
-<!-- BOF $Id: 2006-10-04-iusethis.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>Faglig-sosialt medlemsm&oslash;te om web-applikasjoner!</h3>
-
+---
+layout: post
+title: Faglig-sosialt medlemsm&oslash;te om web-applikasjoner!
+---
 <p>Oslo.pm arrangerer en erfaringsrapport om hvordan lage en komplett web-applikasjon!</p>
 
 <h4>Bag of tricks from iusethis.com</h4>
@@ -10,18 +11,17 @@
 </p>
 
 <p>Foredragsholder er Marcus Ramberg, aktiv deltager i Catalyst-prosjektet.
- Marcus jobber for tiden som utvikler i <a href="http://startsiden.no/"
- title="Hjemmesiden til Startsiden.no">Startsiden</a>.  </p>
+ Marcus jobber for tiden som utvikler i <a href="http://startsiden.no/" title="Hjemmesiden til Startsiden.no">Startsiden</a>.  </p>
 
 <pre>
    Tid:  <strong>Onsdag 4. oktober 2006, klokken 18:00</strong>
-   Sted: <strong>Invisio A/S, Christian Krohgsgate 34</strong> (rett bak legevakten, <a title="Link til kart" href="http://www.kvasir.no/kart/index.c?id=a_168490">se kart</a>)
+   Sted: <strong>Invisio A/S, Christian Krohgsgate 34</strong> (rett bak legevakten, <a href="http://www.kvasir.no/kart/index.c?id=a_168490" title="Link til kart">se kart</a>)
 
    Merk tid og sted!
 </pre>
 
 
 <p>Foredraget vil vare i 1-2 timer, og etter det faglige vil vi forflytte
- oss til et egnet utested i n&aelig;rheten for &aring; sosialisere. </p>
+ oss til et egnet utested i nærheten for å sosialisere. </p>
 
 <!-- EOF $Source: /home/groupleaders/oslo/.cvsroot/web_docs/arrangementer/2004-12-02-maypole.html,v $ -->
