--- a/_posts/2007-07-04-ruby+perl-barbecue.html
+++ b/_posts/2007-07-04-ruby+perl-barbecue.html
@@ -1,22 +1,24 @@
-<h3>Grilling p&aring; Hoved&oslash;ya!</h3>
-
+---
+layout: post
+title: Grilling p&aring; Hoved&oslash;ya!
+---
 <p>Oslo.pm og <a href="http://irb.no/">Ruby foreningen</a> inviterer
-til grilling p&aring; Hoved&oslash;ya! Oppm&oslash;te p&aring;
-Vippetangen klokken 18:00 (Punktlig, b&aring;ten g&aring;r like
-etterp&aring;!)</p>
+til grilling på Hovedøya! Oppmøte på
+Vippetangen klokken 18:00 (Punktlig, båten går like
+etterpå!)</p>
 
 <p>Gled deg til heftige diskusjoner med gjengen i irb.no, og om vi er
-heldige s&aring; l&aelig;rer vi en masse om hverandres
-favoritt-spr&aring;k. :) Ta med grillmat, engangsgrill, godt v&aelig;r
-og hum&oslash;r - og evt. annet som kan egne seg p&aring; en fjerde
+heldige så lærer vi en masse om hverandres
+favoritt-språk. :) Ta med grillmat, engangsgrill, godt vær
+og humør - og evt. annet som kan egne seg på en fjerde
 julidag.</p>
 
 <pre>
    Tema: Grilling
-   Sted: Vippetangen -> Hoved&oslash;ya
+   Sted: Vippetangen -&gt; Hovedøya
    Tid:  4. juli 2007, kl. 18:00
-   URL:  irb.no sin <a href="http://irb.no/-/calendar_entry/show/2217_grillfest-sommeravslutning">annonsering p&aring; irb.no</a>.
-   URL:  Oslo.pm sin <a href="http://origo.no/-/calendar_entry/show/1763_grillparty-paa-hovedoeya">Annonsering p&aring; origo.no</a>.
+   URL:  irb.no sin <a href="http://irb.no/-/calendar_entry/show/2217_grillfest-sommeravslutning">annonsering på irb.no</a>.
+   URL:  Oslo.pm sin <a href="http://origo.no/-/calendar_entry/show/1763_grillparty-paa-hovedoeya">Annonsering på origo.no</a>.
 </pre>
 
 <p>Husk Perl t-skjorta! ;-D</p>
