--- a/_posts/2007-11-29-genfors.html
+++ b/_posts/2007-11-29-genfors.html
@@ -1,17 +1,18 @@
-<!-- $Id: 2007-11-29-genfors.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>&Aring;rsm&oslash;tet 2007 for Oslo.pm</h3>
-
-<p>Oslo.pm har sitt &aring;rsm&oslash;te <strong>torsdag 19. november 2007, klokken
-18:30</strong>. Vi treffes p&aring;
+---
+layout: post
+title: &Aring;rsm&oslash;tet 2007 for Oslo.pm
+---
+<p>Oslo.pm har sitt årsmøte <strong>torsdag 19. november 2007, klokken
+18:30</strong>. Vi treffes på
 <strong><a href="http://linpro.no/no/om_linpro/her_finner_du_oss" title="Link til karttjeneste">Linpro</a>, Vitaminveien 1A (Storo)</strong>.</p>
 
 <p>
-Agenda for m&oslash;tet er:
+Agenda for møtet er:
 </p>
 <ol>
-  <li>&Aring;pning; valg av m&oslash;teleder og referent.</li>
-  <li> &Aring;rsberetning.</li>
-  <li> &Aring;rsregnskap.</li>
+  <li>Åpning; valg av møteleder og referent.</li>
+  <li> Årsberetning.</li>
+  <li> Årsregnskap.</li>
   <li> Valg av styre.</li>
   <li> Budsjett.</li>
   <li> Vedtektsendringer.</li>
