--- a/_posts/2008-01-02-sosialt.html
+++ b/_posts/2008-01-02-sosialt.html
@@ -1,13 +1,14 @@
-<!-- $Id: 2008-01-02-sosialt.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>Desember-medlemsm&oslash;tet i Oslo.pm</h3>
-
-<p>Oslo.pm har sosialt medlemsm&oslash;te <strong>onsdag 2. januar 2008, klokken
-18:30</strong>. Vi treffes p&aring; 
-<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Caf&eacute;</a>, Keysersgate 1</strong>.</p>
+---
+layout: post
+title: Desember-medlemsm&oslash;tet i Oslo.pm
+---
+<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 2. januar 2008, klokken
+18:30</strong>. Vi treffes på 
+<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Café</a>, Keysersgate 1</strong>.</p>
 
 <p>
-Tema for m&oslash;tet blir <a href="http://friprog.no/">friprog.no</a>
-sin konferanse i April, Microsoft sitt utspill om &aring; gj&oslash;re
-"<a href="http://digi.no/php/art.php?id=501168">Windows til plattform
-for norsk &aring;pen kildekode</a>" - og alt annet vi finner interessant.
+Tema for møtet blir <a href="http://friprog.no/">friprog.no</a>
+sin konferanse i April, Microsoft sitt utspill om å gjøre
+&quot;<a href="http://digi.no/php/art.php?id=501168">Windows til plattform
+for norsk åpen kildekode</a>&quot; - og alt annet vi finner interessant.
 </p>
