--- a/_posts/2008-04-02-teste-kurs.html
+++ b/_posts/2008-04-02-teste-kurs.html
@@ -1,7 +1,8 @@
-<h2>Kurs om Test-automatisering, 2. til 4. april!</h2>
-     
+---
+layout: post
+title: Kurs om Test-automatisering, 2. til 4. april!
+---
 <p>Gabor Szabo inviterer sammen med Oslo.pm og Linpro til en
    tre-dagers intro til avansert testing, i Linpro sine lokaler
-   p&aring; Storo. For mer informasjon, se <a
-   href="http://oslo.pm.org/kurs.shtml">kurs-sida</a> vi
+   på Storo. For mer informasjon, se <a href="http://oslo.pm.org/kurs.shtml">kurs-sida</a> vi
    opprettet for anledningen.</p>
