--- a/_posts/2008-11-28-genfors.html
+++ b/_posts/2008-11-28-genfors.html
@@ -1,24 +1,25 @@
-<!-- $Id: 2008-11-28-genfors.html 74 2008-11-07 18:39:34Z sjn $ -->
-<h3>&Aring;rsm&oslash;tet 2008 for Oslo.pm</h3>
+---
+layout: post
+title: &Aring;rsm&oslash;tet 2008 for Oslo.pm
+---
+<p>Oslo.pm har sitt årsmøte <strong>torsdag 28. november 2008, klokken
+18:30</strong>. Vi treffes på
+<strong><a href="http://www.foyen.no/" title="Link firmasider">FØYEN Advokatfirma DA</a>, C J Hambros plass 2 (<a href="http://www.gulesider.no/kart/#id%3Dc_Z0HB23O3%26lon%3D597354.977088%26lat%3D6643333.560761%26zoom%3D15%26layers%3DB0000%26tab%3Dyellow" title="Link til karttjeneste">v/Tinghuset</a>)</strong>.</p>
 
-<p>Oslo.pm har sitt &aring;rsm&oslash;te <strong>torsdag 28. november 2008, klokken
-18:30</strong>. Vi treffes p&aring;
-<strong><a href="http://www.foyen.no/" title="Link firmasider">F&Oslash;YEN Advokatfirma DA</a>, C J Hambros plass 2 (<a href="http://www.gulesider.no/kart/#id%3Dc_Z0HB23O3%26lon%3D597354.977088%26lat%3D6643333.560761%26zoom%3D15%26layers%3DB0000%26tab%3Dyellow" title="Link til karttjeneste">v/Tinghuset</a>)</strong>.</p>
-
-<p>Oppm&oslash;te ved Tinghuset kl. 18:25, Kirill kommer ned og henter de oppm&oslash;tte kl. 18:30; ring 928 83 974 hvis du kommer for sent.</p>
+<p>Oppmøte ved Tinghuset kl. 18:25, Kirill kommer ned og henter de oppmøtte kl. 18:30; ring 928 83 974 hvis du kommer for sent.</p>
 
 <p>
-Agenda for m&oslash;tet er:
+Agenda for møtet er:
 </p>
 <ol>
-  <li> &Aring;pning; valg av m&oslash;teleder og referent.</li>
-  <li> Valg av to medlemmer til &aring; undertegne protokollen.</li>
-  <li> &Aring;rsberetning.</li>
-  <li> &Aring;rsregnskap.</li>
+  <li> Åpning; valg av møteleder og referent.</li>
+  <li> Valg av to medlemmer til å undertegne protokollen.</li>
+  <li> Årsberetning.</li>
+  <li> Årsregnskap.</li>
   <li> Valg av styre og andre tillitsmenn.</li>
   <li> Budsjett.</li>
   <!-- li> Vedtektsendringer.</li -->
   <li> Eventuelt.</li>
 </ol>
 
-<p>&Aring;rsberetning, &aring;rsregnskap og valgkomit&eacute;ens innstilling ettersendes. Det foreligger ingen forslag til vedtektsendringer eller andre innkomne saker til behandling p&aring; &aring;rsm&oslash;tet.</p>
+<p>Årsberetning, årsregnskap og valgkomitéens innstilling ettersendes. Det foreligger ingen forslag til vedtektsendringer eller andre innkomne saker til behandling på årsmøtet.</p>
