--- a/_posts/2009-11-04-sosialt.html
+++ b/_posts/2009-11-04-sosialt.html
@@ -1,10 +1,11 @@
-<!-- $Id: 2008-03-05-sosialt.html 50 2008-03-04 02:29:56Z sjn $ -->
-<h2>November-medlemsm&oslash;tet i Oslo.pm</h2>
-
-<p>Oslo.pm har sosialt medlemsm&oslash;te <strong>onsdag 4. November 2009, klokken
+---
+layout: post
+title: November-medlemsm&oslash;tet i Oslo.pm
+---
+<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 4. November 2009, klokken
 18:30</strong>. Vi treffes hos
-<strong><a href="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=m%C3%B8lleparken+21,oslo,+norge&sll=55.791631,12.268724&sspn=0.006852,0.01929&ie=UTF8&t=h&hq=&hnear=M%C3%B8lleparken,+Oslo,+Norway&ll=59.928549,10.756774&spn=0.005365,0.01929&z=16" title="Link til karttjeneste">ABC Startsiden</a>, Sagveien 21A, i M&oslash;lleparken</strong>. Ring Andreas Marienborg (+47 982 93 610) om du ikke finner frem.</p>
+<strong><a href="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=m%C3%B8lleparken+21,oslo,+norge&amp;sll=55.791631,12.268724&amp;sspn=0.006852,0.01929&amp;ie=UTF8&amp;t=h&amp;hq=&amp;hnear=M%C3%B8lleparken,+Oslo,+Norway&amp;ll=59.928549,10.756774&amp;spn=0.005365,0.01929&amp;z=16" title="Link til karttjeneste">ABC Startsiden</a>, Sagveien 21A, i Mølleparken</strong>. Ring Andreas Marienborg (+47 982 93 610) om du ikke finner frem.</p>
 
 <p>
-Tema: Vi har erfaringsutveksling rundt web-rammeverk! Marcus Ramberg (fra Catalyst-prosjektet) gir en kort innleding og sammenligning, og s&aring; er ordet fritt. Etter m&oslash;tet drar vi ut og sosialiserer.
+Tema: Vi har erfaringsutveksling rundt web-rammeverk! Marcus Ramberg (fra Catalyst-prosjektet) gir en kort innleding og sammenligning, og så er ordet fritt. Etter møtet drar vi ut og sosialiserer.
 </p>
