--- a/_posts/2012-08-25-movingtomoose-hackathon.html
+++ b/_posts/2012-08-25-movingtomoose-hackathon.html
@@ -1,12 +1,14 @@
-<h2>Oslo.pm arrangerer "Moving to Moose" hackathon!</h2>
+---
+layout: post
+title: Oslo.pm arrangerer &quot;Moving to Moose&quot; hackathon!
+---
+<p>Vi har invitert kjernemedlemmer i #p5-mop og #perlrdf milj¯ene til Preikestolen Fjellstue!</p>
 
-<p>Vi har invitert kjernemedlemmer i #p5-mop og #perlrdf milj&oslash;ene til Preikestolen Fjellstue!</p>
+<p>Arrangementet er f¯rst og fremst for spesielt interesserte, men hvis du bryr deg om <em>OO i Perl 5</em>, <em>Moose og relatert infrastruktur</em>, <em>RDF og Semantic Web</em>, og hvordan disse kan utnyttes, og forbedres (eller andre relaterte tema), sÂ er du hjertelig velkommen til Â delta!</p>
 
-<p>Arrangementet er f&oslash;rst og fremst for spesielt interesserte, men hvis du bryr deg om <em>OO i Perl 5</em>, <em>Moose og relatert infrastruktur</em>, <em>RDF og Semantic Web</em>, og hvordan disse kan utnyttes, og forbedres (eller andre relaterte tema), s&aring; er du hjertelig velkommen til &aring; delta!</p>
+<p>Detaljer rundt arrangementet finnes pÂ vÂr <a href="http://act.yapc.eu/mtmh2012/">hackathon-side</a>. PÂmelding skjer ogsÂ der, og <strong>frist for p√•melding er 25. Juni 2012</strong>.</p>
 
-<p>Detaljer rundt arrangementet finnes p&aring; v&aring;r <a href="http://act.yapc.eu/mtmh2012/">hackathon-side</a>. P&aring;melding skjer ogs&aring; der, og <strong>frist for p√•melding er 25. Juni 2012</strong>.</p>
-
-<p>De viktigste stikkordene er <em>Meta Object Protocol i Perl 5 core</em>, <em>Migrering til Moose</em>, <em>25. til 30. august 2012</em>, <em>Hacking</em> og <em>Sosialiteter</em>. Kommersiell deltagerpris er ‚Ç¨2500, men aktive deltagere i Perl-, CPAN og relaterte milj√∏er kan f√• rabattkoder ved √• henvende seg til arrang√∏rene (IRC: #oslo.pm p√• irc.perl.org). <a href="http://act.yapc.eu/mtmh2012/register">Meld deg p&aring; her</a>!</p>
+<p>De viktigste stikkordene er <em>Meta Object Protocol i Perl 5 core</em>, <em>Migrering til Moose</em>, <em>25. til 30. august 2012</em>, <em>Hacking</em> og <em>Sosialiteter</em>. Kommersiell deltagerpris er ‚Ç¨2500, men aktive deltagere i Perl-, CPAN og relaterte milj√∏er kan f√• rabattkoder ved √• henvende seg til arrang√∏rene (IRC: #oslo.pm p√• irc.perl.org). <a href="http://act.yapc.eu/mtmh2012/register">Meld deg pÂ her</a>!</p>
 
 <ul>
   <li><a href="http://act.yapc.eu/mtmh2012/">Hovedside for arrangementet</a></li>
