--- a/_posts/2012-11-07-mojo-workshop.html
+++ b/_posts/2012-11-07-mojo-workshop.html
@@ -1,19 +1,20 @@
-<!-- $Id: $ -->
-<h3>Mojo hands-on tutorial</h3>
-
-<p>Wednesday Movember 7th, we'll be building a real time web application in the
+---
+layout: post
+title: Mojo hands-on tutorial
+---
+<p>Wednesday Movember 7th, we&#39;ll be building a real time web application in the
 Mojolicious framework! :)</p>
 
 <ul>
   <li><strong>Topic:</strong> Mojo Hands-on tutorial</li>
   <li><strong>Time:</strong> Wednesday Movember 7th, 2012 at 18:30</li>
-  <li><strong>Place:</strong> Noworking, Youngstorget 3, Oslo (doorbell says "Nordaaker")</li>
+  <li><strong>Place:</strong> Noworking, Youngstorget 3, Oslo (doorbell says &quot;Nordaaker&quot;)</li>
   <li><strong>Map:</strong> <a href="http://goo.gl/maps/XGHOy">http://goo.gl/maps/XGHOy</a></li>
 </ul>
 
-<p>Marcus Ramberg invites Oslo.pm to his "Noworking" co-working facility at Nordaaker, where he's going to help us go through all the steps of creating a web application with Mojolicious. Bring your laptop!</p>
+<p>Marcus Ramberg invites Oslo.pm to his &quot;Noworking&quot; co-working facility at Nordaaker, where he&#39;s going to help us go through all the steps of creating a web application with Mojolicious. Bring your laptop!</p>
 
-<p>We'll be looking at all the steps for creating a proper web application with Mojolicious, including:</p>
+<p>We&#39;ll be looking at all the steps for creating a proper web application with Mojolicious, including:</p>
 
 <ul>
   <li>Making a super-quick prototype with Mojo::Lite</li>
@@ -37,7 +38,7 @@ Mojolicious framework! :)</p>
 
 <p>Hope to see you there!</p>
 
-<p>P.S. if you plan on coming, please drop by our IRC channel <a href="http://mibbit.com/?channel=%23oslo.pm&server=irc.perl.org" title="Link til Mibbit web-IRC klient">#oslo.pm on irc.perl.org</a> and tell us!</p>
+<p>P.S. if you plan on coming, please drop by our IRC channel <a href="http://mibbit.com/?channel=%23oslo.pm&amp;server=irc.perl.org" title="Link til Mibbit web-IRC klient">#oslo.pm on irc.perl.org</a> and tell us!</p>
 
 
 <ul>
