--- a/_posts/2012-12-05-juleol.html
+++ b/_posts/2012-12-05-juleol.html
@@ -1,7 +1,8 @@
-<!-- $Id: 2007-12-05-sosialt.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>Desember-medlemsm&oslash;tet i Oslo.pm</h3>
-
-<p>Oslo.pm har sosialt medlemsm&oslash;te <strong>Onsdag 5. desember 2012, klokken 18:30</strong>. Vi treffes p&aring; 
+---
+layout: post
+title: Desember-medlemsm&oslash;tet i Oslo.pm
+---
+<p>Oslo.pm har sosialt medlemsmøte <strong>Onsdag 5. desember 2012, klokken 18:30</strong>. Vi treffes på 
 <strong><a href="https://www.facebook.com/Schouskjelleren" title="Link til facebook-siden">Schouskjelleren</a>, Trondheimsveien 2</strong>.</p>
 
 <p>
