--- a/_posts/bruk-wikien-istedet.html
+++ b/_posts/bruk-wikien-istedet.html
@@ -1,5 +1,8 @@
-<h2>Hva skjer i Oslo.pm?</h2>
-<p>Vi har flyttet oversikten over aktivitetene v&aring;re til wikien! Der kan du ogsÃ¥ abbonnere p&aring; endringer og oppdateringer, og evt. bidra p&aring; andre vis.</p>
+---
+layout: post
+title: Hva skjer i Oslo.pm?
+---
+<p>Vi har flyttet oversikten over aktivitetene våre til wikien! Der kan du ogsÃ¥ abbonnere på endringer og oppdateringer, og evt. bidra på andre vis.</p>
 
 <ul>
   <li><a href="http://wiki.oslo.pm.org/">Programmet</a> pÃ¥ wiki-siden.</li>
