--- a/_posts/2003-07-02-sosialt.html
+++ b/_posts/2003-07-02-sosialt.html
@@ -1,6 +1,7 @@
-<!-- $Id: 2003-07-02-sosialt.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>Neste medlemsmøte i Oslo.pm</h3>
-
+---
+layout: post
+title: Neste medlemsm&oslash;te i Oslo.pm
+---
 <p>Oslo.pm har sosialt medlemsmøte <strong>2. juli 2003, klokken
 18:00</strong>. Vi satser på en hyggelig stund på <strong>Pasitz,
 Tordenskioldsgate 10 v/Rådhuset</strong>.</p>
