--- a/_posts/2004-04-14-sosialt.html
+++ b/_posts/2004-04-14-sosialt.html
@@ -1,9 +1,10 @@
-<!-- $Id: 2004-04-14-sosialt.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h2>Neste sosiale sammenkomst i Oslo.pm</h2>
-
-<p>Oslo.pm har sosialt medlemsm&oslash;te <strong>14. april 2004,
-klokken 18:00</strong> (<em>ikke</em> f&oslash;rste onsdag
-m&aring;neden, grunnet p&aring;sken.) Vi satser p&aring; en hyggelig
-stund som vanlig p&aring; <strong>Pastiz, Tordenskioldsgate 10
-v/R&aring;dhuset</strong>.</p>
+---
+layout: post
+title: Neste sosiale sammenkomst i Oslo.pm
+---
+<p>Oslo.pm har sosialt medlemsmøte <strong>14. april 2004,
+klokken 18:00</strong> (<em>ikke</em> første onsdag
+måneden, grunnet påsken.) Vi satser på en hyggelig
+stund som vanlig på <strong>Pastiz, Tordenskioldsgate 10
+v/Rådhuset</strong>.</p>
 
