--- a/_posts/2004-11-03-sosialt.html
+++ b/_posts/2004-11-03-sosialt.html
@@ -1,7 +1,8 @@
-<!-- $Id: 2004-11-03-sosialt.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>Neste medlemsm&oslash;te i Oslo.pm</h3>
-
-<p>Oslo.pm har sosialt medlemsm&oslash;te <strong>3. november 2004, klokken
-18:00</strong>. Vi satser p&aring; en hyggelig stund p&aring; <strong>Pasitz,
-Tordenskioldsgate 10 v/R&aring;dhuset</strong>.</p>
+---
+layout: post
+title: Neste medlemsm&oslash;te i Oslo.pm
+---
+<p>Oslo.pm har sosialt medlemsmøte <strong>3. november 2004, klokken
+18:00</strong>. Vi satser på en hyggelig stund på <strong>Pasitz,
+Tordenskioldsgate 10 v/Rådhuset</strong>.</p>
 
