--- a/_posts/2005-01-05-sosialt.html
+++ b/_posts/2005-01-05-sosialt.html
@@ -1,7 +1,8 @@
-<!-- $Id: 2005-01-05-sosialt.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>Neste medlemsm&oslash;te i Oslo.pm</h3>
-
-<p>Oslo.pm har sosialt medlemsm&oslash;te <strong>5. januar 2005, klokken
-18:00</strong>. Vi satser p&aring; en hyggelig stund p&aring;
+---
+layout: post
+title: Neste medlemsm&oslash;te i Oslo.pm
+---
+<p>Oslo.pm har sosialt medlemsmøte <strong>5. januar 2005, klokken
+18:00</strong>. Vi satser på en hyggelig stund på
 <strong>[UBESTEMT], [STED] v/[OMRÃ…DE]</strong>.</p>
 
