--- a/_posts/2005-09-14-log4perl.html
+++ b/_posts/2005-09-14-log4perl.html
@@ -1,33 +1,30 @@
-<h3>Faglig-sosialt medlemsm&oslash;te om Log4Perl!</h3>
-
-<p>Oslo.pm arrangerer en introduksjon til <a
-href="http://search.cpan.org/~mschilli/Log-Log4perl-1.00/"
-title="Log4Perl p&aring; CPAN">Log4perl</a>, som er et loggesystem
-direkte basert p&aring; log4j -- det mest brukte systemet for logging i
-Java-verdenen. I tillegg til &aring; ha blitt portet til Perl i form av
-Log4perl, finnes det ogs&aring; ports av log4j for Python, Ruby, Eiffel,
+---
+layout: post
+title: Faglig-sosialt medlemsm&oslash;te om Log4Perl!
+---
+<p>Oslo.pm arrangerer en introduksjon til <a href="http://search.cpan.org/~mschilli/Log-Log4perl-1.00/" title="Log4Perl på CPAN">Log4perl</a>, som er et loggesystem
+direkte basert på log4j -- det mest brukte systemet for logging i
+Java-verdenen. I tillegg til å ha blitt portet til Perl i form av
+Log4perl, finnes det også ports av log4j for Python, Ruby, Eiffel,
 C, C++ og C#.
 </p>
 
 <p>
-Noen av n&oslash;kkeltrekkene til Log4perl er muligheten til &aring; dele opp
+Noen av nøkkeltrekkene til Log4perl er muligheten til å dele opp
 loggingen i et hierarkisk kategorisystem (med arv), samt muligheten
-til &aring; styre hva som skal logges, hvor ting skal logges (fil, database,
-e-post), og p&aring; hvilke formater det skal logges, kun ved &aring; redigere i
-en konfigurasjonsfil, slik at man unng&aring;r endringer i kildekoden.
+til å styre hva som skal logges, hvor ting skal logges (fil, database,
+e-post), og på hvilke formater det skal logges, kun ved å redigere i
+en konfigurasjonsfil, slik at man unngår endringer i kildekoden.
 </p>
 
 <pre>
    Tid:  <strong>Onsdag 14. september 2005, klokken 18:00</strong>
-   Sted: <strong>Tinde ASA, <a
-href="http://finnmap.aftenposten.no/finn/cleanmap?street=stortingsgata&amp;no=8"
-title="kart">Stortingsgata 8</a></strong>
+   Sted: <strong>Tinde ASA, <a href="http://finnmap.aftenposten.no/finn/cleanmap?street=stortingsgata&amp;no=8" title="kart">Stortingsgata 8</a></strong>
 </pre>
 
 
 <p>Introduksjonen holdes av Lars Haugseth, som for tiden jobber som
-senior systemutvikler i <a href="http://www.tinde.no/"
-title="Hjemmesiden til Tinde">Tinde ASA</a>, der hans oppgaver
-bl.a. best&aring;r av 
-utvikling p&aring; et 100% Perl-basert rammeverk for annonseportaler.
+senior systemutvikler i <a href="http://www.tinde.no/" title="Hjemmesiden til Tinde">Tinde ASA</a>, der hans oppgaver
+bl.a. består av 
+utvikling på et 100% Perl-basert rammeverk for annonseportaler.
 </p>
