--- a/_posts/2005-11-02-perl6.html
+++ b/_posts/2005-11-02-perl6.html
@@ -1,8 +1,10 @@
-<h3>Faglig-sosialt medlemsm&oslash;te om perl6</h3>
-
+---
+layout: post
+title: Faglig-sosialt medlemsm&oslash;te om perl6
+---
 <p>Introduksjon til Perl 6, av Rune Nilsen</p>
 
-<p>Tema som vil bli ber&oslash;rt er:</p>
+<p>Tema som vil bli berørt er:</p>
 
 <ul>
  <li> Syntax-endringer</li>
@@ -18,14 +20,11 @@
 
 <pre>
    Tid:  <strong>Onsdag 2. november 2005, klokken 18:00</strong>
-   Sted: <strong>Tinde ASA, <a
-href="http://finnmap.aftenposten.no/finn/cleanmap?street=stortingsgata&amp;no=8"
-title="kart">Stortingsgata 8</a></strong>
+   Sted: <strong>Tinde ASA, <a href="http://finnmap.aftenposten.no/finn/cleanmap?street=stortingsgata&amp;no=8" title="kart">Stortingsgata 8</a></strong>
 </pre>
 
-<p>Rune Nilsen (rune&#x40;iknowhow.no) driver firmaet Interactive
-Know-How AS, er innleid som systemarktitekt i <a
- href="http://www.tinde.no/" title="Hjemmesiden til Tinde">Tinde
-ASA</a>, og har jobbet med perl i st&oslash;rre internett-prosjekter
+<p>Rune Nilsen (rune@iknowhow.no) driver firmaet Interactive
+Know-How AS, er innleid som systemarktitekt i <a href="http://www.tinde.no/" title="Hjemmesiden til Tinde">Tinde
+ASA</a>, og har jobbet med perl i større internett-prosjekter
 siden 1996.</p>
 
