--- a/_posts/2006-11-01-stifting.html
+++ b/_posts/2006-11-01-stifting.html
@@ -1,6 +1,7 @@
-<!-- BOF $Id: 2006-11-01-stifting.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>Oslo.pm skal stiftes!</h3>
-
+---
+layout: post
+title: Oslo.pm skal stiftes!
+---
 <h4>Møtedetaljer</h4>
 <pre>    Sted: Linpro A/S, Vitaminveien 1 A (v/Storo-krysset, <a href="http://kart.gulesider.no/kart/map.c?id=a_1250847" title="Link til karttjeneste">se kart</a>)
     Tid:  1. november 2006, kl. 18:00 og utover.</pre>
@@ -35,5 +36,5 @@
 6. Avslutning ved nyvalgt leder
 </pre>
 
-<p><a href="/vedtekter.shtml" title="Oslo.pm sine foresl&aring;tte vedtekter">Utkast til vedtekter</a>.</p>
+<p><a href="/vedtekter.shtml" title="Oslo.pm sine foreslåtte vedtekter">Utkast til vedtekter</a>.</p>
 
