--- a/_posts/2007-05-02-double-p6.html
+++ b/_posts/2007-05-02-double-p6.html
@@ -1,6 +1,7 @@
-<!-- BOF $Id: 2007-05-02-double-p6.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>Faglig-sosialt medlemsm&oslash;te om Perl 6!</h3>
-
+---
+layout: post
+title: Faglig-sosialt medlemsm&oslash;te om Perl 6!
+---
 <p>Oslo.pm arrangerer trippel gjesteforedrag! Denne gangen har vi lånt to
 foredragsholdere fra årets <a href="http://conferences.yapceurope.org/npw2007/">Nordic Perl Workshop i København</a>.</p>
 
@@ -8,13 +9,13 @@ foredragsholdere fra årets <a href="http://conferences.yapceurope.org/npw2007/">
    Tid:  <strong>Onsdag 2. mai 2007, klokken 18:00</strong>
    Sted: <strong>Høyskolen i Oslo, avd. for Ingeniørutdanning
          Cort Adelers gate 30, auditorium 1.701 (7. etg.)</strong> 
-   Kart: <a title="Link til kart" href="http://www.kvasir.no/kart/index.c?id=a_168652">http://www.kvasir.no/kart/index.c?id=a_168652</a>
+   Kart: <a href="http://www.kvasir.no/kart/index.c?id=a_168652" title="Link til kart">http://www.kvasir.no/kart/index.c?id=a_168652</a>
 
    Merk tid og sted!
 </pre>
 
 
-<h4>Nelson Ferraz: "Adventures in Perl6"</h4>
+<h4>Nelson Ferraz: &quot;Adventures in Perl6&quot;</h4>
 
 <p>This talk is about writing text adventures, or Interactive Fictions, in
 Perl6.</p>
@@ -26,7 +27,7 @@ type of adventure game with text-based input and output.</p>
 
 <p>The process of writing an IF in Perl6 is an adventure in itself.</p>
 
-<h4>Nelson Ferraz: "Code Generation with Perl"</h4>
+<h4>Nelson Ferraz: &quot;Code Generation with Perl&quot;</h4>
 
 <p>Code Generation is the technique of writing programs that write or
     manipulate other programs. In many cases, this allows programmers to
@@ -36,16 +37,16 @@ type of adventure game with text-based input and output.</p>
 <p>This presentation will show how Perl can be used to generate other
     languages and Perl itself.</p>
 
-<p>We'll also be introduced to an XML-based application description
+<p>We&#39;ll also be introduced to an XML-based application description
     language, which allows a programmer to describe *what* he wants to
     produce, not *how* to implement it.</p>
 
 
-<h4>Jonathan Worthington: "Playing with bird guts"</h4>
+<h4>Jonathan Worthington: &quot;Playing with bird guts&quot;</h4>
 
 <p>Parrot is a virtual machine for dynamic languages. It is one
    target for Perl 6 amongst a wide range of other languages. In this talk
-   I'll dive into how some bits of Parrot actually work. I'll include:</p>
+   I&#39;ll dive into how some bits of Parrot actually work. I&#39;ll include:</p>
 
 <ul><li>A high level overview of how you go from high level langauge to
        actually running It</li>
@@ -64,19 +65,19 @@ type of adventure game with text-based input and output.</p>
     of the Brazilian Perl Society, nowadays he lives and works in Lisbon.</p>
 
 <p>Jonathan Worthington:
-<blockquote>"After graduaing last summer, I've been doing a
+</p><blockquote>&quot;After graduaing last summer, I&#39;ve been doing a
     mix of consultancy, going to Perl events and traveling. I started
     hacking on the Parrot VM in 2003, mostly working on improving Windows
-    support through a number of little patches. I'm to blame for the Parrot
+    support through a number of little patches. I&#39;m to blame for the Parrot
     bytecode file linker and the .Net =&gt; Parrot bytecode translator, which
     I worked on as my final year degree project. My more recent Parrot
     exploits include working on changes to the bytecode file design and
     leading the implementatin of the new object model, complete with
-    roles."</blockquote>
-</p>
+    roles.&quot;</blockquote>
+
 
 
 <p>Foredragene vil totalt vare i 1,5-2 timer, og etter det faglige vil vi forflytte
- oss til et egnet utested i n&aelig;rheten for &aring; sosialisere. </p>
+ oss til et egnet utested i nærheten for å sosialisere. </p>
 
 <!-- EOF $Source: /home/groupleaders/oslo/.cvsroot/web_docs/arrangementer/2004-12-02-maypole.html,v $ -->
