--- a/_posts/2007-12-05-sosialt.html
+++ b/_posts/2007-12-05-sosialt.html
@@ -1,12 +1,13 @@
-<!-- $Id: 2007-12-05-sosialt.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>Desember-medlemsm&oslash;tet i Oslo.pm</h3>
-
-<p>Oslo.pm har sosialt medlemsm&oslash;te <strong>onsdag 5. desember 2007, klokken
-18:30</strong>. Vi treffes p&aring; 
-<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Caf&eacute;</a>, Keysersgate 1</strong>.</p>
+---
+layout: post
+title: Desember-medlemsm&oslash;tet i Oslo.pm
+---
+<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 5. desember 2007, klokken
+18:30</strong>. Vi treffes på 
+<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Café</a>, Keysersgate 1</strong>.</p>
 
 <p>
-Tema for m&oslash;tet vil (bortsett fra det rent hyggelige og
-sosiale) v&aelig;re planlegging av aktiviteter i 2008, kanskje inkludert
+Tema for møtet vil (bortsett fra det rent hyggelige og
+sosiale) være planlegging av aktiviteter i 2008, kanskje inkludert
 en Perl Quiz kveld? Bli med! :)
 </p>
