--- a/_posts/2008-03-05-sosialt.html
+++ b/_posts/2008-03-05-sosialt.html
@@ -1,11 +1,12 @@
-<!-- $Id: 2008-03-05-sosialt.html 50 2008-03-04 02:29:56Z sjn $ -->
-<h2>Mars-medlemsm&oslash;tet i Oslo.pm</h2>
-
-<p>Oslo.pm har sosialt medlemsm&oslash;te <strong>onsdag 5. mars 2008, klokken
-18:30</strong>. Vi treffes p&aring; 
-<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Caf&eacute;</a>, Keysersgate 1</strong>.</p>
+---
+layout: post
+title: Mars-medlemsm&oslash;tet i Oslo.pm
+---
+<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 5. mars 2008, klokken
+18:30</strong>. Vi treffes på 
+<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Café</a>, Keysersgate 1</strong>.</p>
 
 <p>
-Tema for m&oslash;tet blir forberedelsene for Oslo QA Hackathon, testing
+Tema for møtet blir forberedelsene for Oslo QA Hackathon, testing
 med Perl - og alt annet vi finner interessant.
 </p>
