--- a/_posts/2008-04-02-sosialt.html
+++ b/_posts/2008-04-02-sosialt.html
@@ -1,11 +1,12 @@
-<!-- $Id: 2008-04-02-sosialt.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>April-medlemsm&oslash;tet i Oslo.pm</h3>
-
-<p>Oslo.pm har sosialt medlemsm&oslash;te <strong>onsdag 2. april 2008, klokken
-18:30</strong>. Vi treffes p&aring; 
-<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Caf&eacute;</a>, Keysersgate 1</strong>.</p>
+---
+layout: post
+title: April-medlemsm&oslash;tet i Oslo.pm
+---
+<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 2. april 2008, klokken
+18:30</strong>. Vi treffes på 
+<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Café</a>, Keysersgate 1</strong>.</p>
 
 <p>
-Tema for m&oslash;tet blir forberedelsene for Oslo QA Hackathon, testing
-med Perl, og kanskje vi f&aring;r bes&oslash;k fra utlandet?
+Tema for møtet blir forberedelsene for Oslo QA Hackathon, testing
+med Perl, og kanskje vi får besøk fra utlandet?
 </p>
