--- a/_posts/2008-11-05-perl6-testing.html
+++ b/_posts/2008-11-05-perl6-testing.html
@@ -1,8 +1,9 @@
-<!-- $Id: 2008-07-02-sosialt.html 62 2008-07-01 11:28:14Z sjn $ -->
-<h2>November-medlemsm&oslash;tet i Oslo.pm</h2>
-
-<p>Oslo.pm har faglig-sosialt medlemsm&oslash;te <strong>onsdag 5. november 2008,
-klokken 18:30</strong>. Vi treffes p&aring; 
-<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Caf&eacute;</a>, Keysers gate 1</strong>.</p>
+---
+layout: post
+title: November-medlemsm&oslash;tet i Oslo.pm
+---
+<p>Oslo.pm har faglig-sosialt medlemsmøte <strong>onsdag 5. november 2008,
+klokken 18:30</strong>. Vi treffes på 
+<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Café</a>, Keysers gate 1</strong>.</p>
 
 <p>Denne gangen har Karl Rune Nilsen (<a href="http://linpro.no/">Redpill-Linpro</a>) lovet oss en introduksjon til hvordan lage tester i <a href="http://rakudo.org/">Rakudo Perl</a> (Parrot-implementasjonen av Perl 6.) Detaljer om forberedelser vil bli sendt til aktive-lista!</p>
