--- a/_posts/2009-01-07-ekstra-genfors-og-mojomojo.html
+++ b/_posts/2009-01-07-ekstra-genfors-og-mojomojo.html
@@ -1,25 +1,26 @@
-<!-- $Id: 2009-01-07-ekstra-genfors-og-mojomojo.html 77 2008-12-09 23:10:22Z sjn $ -->
-<h3>Intro til MojoMojo, samt ekstraordin&aelig;rt &aring;rsm&oslash;te 2008 for Oslo.pm</h3>
-
-<p>Oslo.pm har ekstraordin&aelig;rt &aring;rsm&oslash;te <strong>onsdag 7. januar 2009, klokken
+---
+layout: post
+title: Intro til MojoMojo, samt ekstraordin&aelig;rt &aring;rsm&oslash;te 2008 for Oslo.pm
+---
+<p>Oslo.pm har ekstraordinært årsmøte <strong>onsdag 7. januar 2009, klokken
 18:30</strong>. <!-- Vi treffes p&aring;
-<strong><a href="http://www.foyen.no/" title="Link firmasider">F&Oslash;YEN Advokatfirma DA</a>, C J Hambros plass 2 (<a href="http://www.gulesider.no/kart/#id%3Dc_Z0HB23O3%26lon%3D597354.977088%26lat%3D6643333.560761%26zoom%3D15%26layers%3DB0000%26tab%3Dyellow" title="Link til karttjeneste">v/Tinghuset</a>)</strong>. --> Sted blir annonsert senere. I tillegg introduserer Marcus Ramberg Oslo.pm sin nye <a href="http://wiki.oslo.pm.org/">wiki</a> basert p&aring; <a href="http://search.cpan.org/~mramberg/MojoMojo/">MojoMojo</a>.</p>
+<strong><a href="http://www.foyen.no/" title="Link firmasider">F&Oslash;YEN Advokatfirma DA</a>, C J Hambros plass 2 (<a href="http://www.gulesider.no/kart/#id%3Dc_Z0HB23O3%26lon%3D597354.977088%26lat%3D6643333.560761%26zoom%3D15%26layers%3DB0000%26tab%3Dyellow" title="Link til karttjeneste">v/Tinghuset</a>)</strong>. --> Sted blir annonsert senere. I tillegg introduserer Marcus Ramberg Oslo.pm sin nye <a href="http://wiki.oslo.pm.org/">wiki</a> basert på <a href="http://search.cpan.org/~mramberg/MojoMojo/">MojoMojo</a>.</p>
 
 <!-- p>Oppm&oslash;te ved Tinghuset kl. 18:25, Kirill kommer ned og henter de oppm&oslash;tte kl. 18:30; ring 928 83 974 hvis du kommer for sent.</p -->
 
 <p>
-Agenda for &aring;rsm&oslash;tet er:
+Agenda for årsmøtet er:
 </p>
 <ol>
-  <li> &Aring;pning; valg av m&oslash;teleder og referent.</li>
-  <li> Valg av to medlemmer til &aring; undertegne protokollen.</li>
+  <li> Åpning; valg av møteleder og referent.</li>
+  <li> Valg av to medlemmer til å undertegne protokollen.</li>
   <li> Innkallelsens lovlighet.</li>
-  <li> &Aring;rsberetning.</li>
-  <li> &Aring;rsregnskap.</li>
+  <li> Årsberetning.</li>
+  <li> Årsregnskap.</li>
   <li> Valg av styre og andre tillitsmenn.</li>
   <li> Budsjett.</li>
   <!-- li> Vedtektsendringer.</li -->
   <li> Eventuelt.</li>
 </ol>
 
-<p>&Aring;rsberetning, &aring;rsregnskap og valgkomit&eacute;ens innstilling ettersendes. Det foreligger ingen forslag til vedtektsendringer eller andre innkomne saker til behandling.</p>
+<p>Årsberetning, årsregnskap og valgkomitéens innstilling ettersendes. Det foreligger ingen forslag til vedtektsendringer eller andre innkomne saker til behandling.</p>
