--- a/_posts/2009-12-02-nyheter-i-perl-510.html
+++ b/_posts/2009-12-02-nyheter-i-perl-510.html
@@ -1,17 +1,18 @@
-<!-- $Id: 2008-07-02-sosialt.html 62 2008-07-01 11:28:14Z sjn $ -->
-<h2>Desember-medlemsm&oslash;tet i Oslo.pm</h2>
-
-<p>Oslo.pm har faglig-sosialt medlemsm&oslash;te <strong>onsdag 2. desember 2009,
-klokken 18:30</strong>. Vi treffes p&aring; 
-<strong><a href="http://redpill-linpro.no/Om-oss/Her-finner-du-oss" title="Link til veibeskrivelse">Redpill Linpro</a>, Vitaminveien 1A</strong> p&aring; Storo.</p>
+---
+layout: post
+title: Desember-medlemsm&oslash;tet i Oslo.pm
+---
+<p>Oslo.pm har faglig-sosialt medlemsmøte <strong>onsdag 2. desember 2009,
+klokken 18:30</strong>. Vi treffes på 
+<strong><a href="http://redpill-linpro.no/Om-oss/Her-finner-du-oss" title="Link til veibeskrivelse">Redpill Linpro</a>, Vitaminveien 1A</strong> på Storo.</p>
 
 <p>Tema: <strong>Nyheter i Perl 5.10</strong></p>
-<p>Vi har delt opp temaet s&aring; forskjellige medlemmer kan fortelle om et par funksjoner hver:</p>
+<p>Vi har delt opp temaet så forskjellige medlemmer kan fortelle om et par funksjoner hver:</p>
 
 <ul><li>Kirill, om say og //</li>
 <li>Marcus, om given/when og named match i regex</li>
 <li>Jan Henning, om smartmatch-operatoren og pluggable MRO</li>
 <li>og Salve, om Modern::Perl og Task::Kensho</li></ul>
-<p>Etter presentasjonene fortsetter vi med videre diskusjon rundt temaet. Eventuelle drikkevarer m&aring; medbringes, og det blir en kollektiv pizza-bestilling n&aring;r vi starter (si i fra p&aring; forh&aring;nd om du vil vÃ¦re med p&aring; dette.)</p>
+<p>Etter presentasjonene fortsetter vi med videre diskusjon rundt temaet. Eventuelle drikkevarer må medbringes, og det blir en kollektiv pizza-bestilling når vi starter (si i fra på forhånd om du vil vÃ¦re med på dette.)</p>
 
 
