--- a/_posts/2013-01-02-fagol.html
+++ b/_posts/2013-01-02-fagol.html
@@ -1,8 +1,9 @@
-<!-- $Id: 2007-12-05-sosialt.html 42 2008-02-29 01:16:19Z sjn $ -->
-<h3>Januar-medlemsm&oslash;tet i Oslo.pm</h3>
-
-<p>Oslo.pm har sosialt medlemsm&oslash;te <strong>Onsdag 2. januar 2012, klokken 18:30</strong>. Vi treffes p&aring; 
-<strong><a href="http://www.yelp.com/biz/crowbar-og-bryggeri-oslo" title="Link til facebook-siden">Crowbar & Bryggeri</a>, Torggata 32</strong>.</p>
+---
+layout: post
+title: Januar-medlemsm&oslash;tet i Oslo.pm
+---
+<p>Oslo.pm har sosialt medlemsmøte <strong>Onsdag 2. januar 2012, klokken 18:30</strong>. Vi treffes på 
+<strong><a href="http://www.yelp.com/biz/crowbar-og-bryggeri-oslo" title="Link til facebook-siden">Crowbar &amp; Bryggeri</a>, Torggata 32</strong>.</p>
 
 <p>
 Tema: 2013, Perl pÃ¥ UiO, Damian-besÃ¸k i Mars, $whatever.
