Move index content from layout to index.html

--- a/index.html
+++ b/index.html
@@ -1,69 +1,26 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default
+title: Oslo.pm
+author: Salve J. Nilsen
+---
+<h2>Programmerer du Perl?</h2>
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="oslo-pm.github.com : Oslo Perl Mongers website" />
+<p>Velkommen til Oslo Perl Mongers!</p>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+<p>Oslo.pm er en uformell faglig-sosial forening for alle som er interessert i programmeringsspr&aring;ket Perl. Vi tilbyr en m&oslash;teplass for b&aring;de nybegynnere og erfarne og arrangerer jevnlig sammenkomster, foredrag og seminarer. Hos oss finner du et godt sosialt milj&oslash; for og med medlemmene, og sjansen til &aring; m&oslash;te likesinnede.</p>
 
-    <title>oslo-pm.github.com</title>
-  </head>
+<p>&Oslash;nsker du &aring; f&aring; kontakt med andre Perl-folk kan du komme p&aring; v&aring;re medlemsm&oslash;ter (f&oslash;rste onsdag hver m&aring;ned.) I tillegg finnes IRC-kanalene <a href="http://mibbit.com/?channel=%23perl.no&server=irc.umich.edu" title="Link tile web-IRC klient">#perl.no p&aring; EFNet</a> og <a href="http://mibbit.com/?channel=%23oslo.pm&server=irc.perl.org" title="Link til Mibbit web-IRC klient">#oslo.pm p&aring; PerlNet</a> for de som vil chatte, og en egen lavtrafikk moderert <a href="http://mail.pm.org/mailman/listinfo/oslo" title="Til side for listep&aring;melding">epostliste</a> for de som bare &oslash;nsker &aring; holde seg informert om Oslo.pm sine aktiviteter.</p>
 
-  <body>
+<p>Bruk gjerne v&aring;r <a href="http://oslo.pm.org/Oslo.pm.ics" title="iCal kalenderfil">kalenderfil</a> for &aring; f&aring; en p&aring;minnelse rett f&oslash;r hvert m&oslash;te!</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/oslo-pm">View on GitHub</a>
+<h2>Hvordan bli medlem i Oslo.pm?</h2>
 
-          <h1 id="project_title">oslo-pm.github.com</h1>
-          <h2 id="project_tagline">Oslo Perl Mongers website</h2>
+<p>Meld deg inn ved &aring; <a href="http://mail.pm.org/mailman/listinfo/oslo" title="Til side for listep&aring;melding">abonnere p&aring; v&aring;r annonserings-liste</a>. Det er alt! :-)</p>
 
-        </header>
-    </div>
+<h2>Hvordan delta?</h2>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
+<p>Oslo Perl Mongers har en <a href="http://mail.pm.org/mailman/listinfo/oslo-aktive" title="Til side for listep&aring;melding">mailingliste for medlemmer som vil bidra</a>, der vi diskuterer det vi finner interessant om Perl og relaterte tema, planlegger de neste m&oslash;tene v&aring;re, forbereder Perl-arrangementer og alt annet som er interessant eller relevant. Foreningens aktiviteter er basert i medlemmenes innsats, og alle som &oslash;nsker &aring; v&aelig;re med p&aring; moroa er velkommen!</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Alle er selvf&oslash;lgelig hjertelig velkommen p&aring; sammenkomstene v&aring;re - <a href="http://oslo.pm.org/Oslo.pm.ics" title="iCal kalenderfil">f&oslash;rste onsdag hver m&aring;ned</a>.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
-</html>
+<p>Oslo.pm har ogs&aring; noen <a href="vedtekter.shtml" title="Oslo Perl Mongers sine gjeldende vedtekter">vedtekter</a> samt et <a href="styre.shtml" title="Styret i Oslo Perl Mongers">styre</a>. <a href="/kontakt/">Kontaktinfo</a> for foreningen.</p>
