Do not open search results in new window

--- a/search/index.html
+++ b/search/index.html
@@ -10,4 +10,4 @@ search: 1
   Your browser does not support inline search.
   <a href="https://cse.google.com/cse/publicurl?cx=003216111130611352982:uvlrck5wffw">Please search at Google directly</a>.
 </noscript>
-<gcse:searchresults-only></gcse:searchresults-only>
+<gcse:searchresults-only linkTarget="_parent"></gcse:searchresults-only>
